[package]
name = "beebert"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.19.1", features = ["train", "vision", "network", "cpu", "cuda", "ndarray", "wgpu", "dataset", "sqlite", "std", "autodiff", "fusion", "store", "metrics"] }
clap = { version = "4.5.60", features = ["derive"] }
rayon = "1.11.0"
